--- a/html/yxtd/acticle_5.html
+++ b/html/yxtd/acticle_5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>余先生加入-德优城家居有限公司</title>
+	<title>余先生-德优城家居有限公司</title>
 	<!-- custom-theme -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -87,7 +87,7 @@
 					<div class="single-left1">
 						<h3>欢迎余先生加入德优城大家庭！</h3>
 						<img src="https://i1.wp.com/deyoucheng.com/images/2/woshou1.jpg" alt=" " class="img-responsive" />
-						<ul><li><span class="equity">【特许权益】余先生享有公司出厂价格</span></li></ul>
+						<ul><li><span class="equity">【特许权益】德优城内部人员</span></li></ul>
 					<p><i>诚邀家居行业精英，共创美好未来！</i>&nbsp;&nbsp;作为一名资深高端深造家具专家，运营专家。拥有超过20年的行业经验，专业知识和丰富实践经验，使其成为该领域的领军人物。他深谙高端家具市场的动态，精准把握消费者需求，为客户提供专业、个性化的家居解决方案。
 					</p>
 					<img src="https://i1.wp.com/deyoucheng.com/images/3/yu_20231212220433.jpg" alt="合作合影" class="img-responsive" />
